--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -6,5 +6,12 @@
         android:id="@+id/action_settings"
         android:title="Settings"
         android:icon="@drawable/ic_action_settings"
+        android:orderInCategory="2"
+        app:showAsAction="ifRoom"/>
+    <item
+        android:id="@+id/action_favorite"
+        android:title="Favorites"
+        android:icon="@drawable/ic_action_favorite"
+        android:orderInCategory="1"
         app:showAsAction="ifRoom"/>
 </menu>
